--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,9 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    
+    <h2>name: <%= user.name %></h2>
+    <h2>password: <%= user.passwd %></h2>
+    <h2>email: <%= user.email %></h2>
   </body>
 </html>
