--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,14 +69,8 @@
 <div class="container">
 
 </div>
-<div id="footer" class="container-fluid">
-    <div class="row">
-      <div class="col-md-4">联系方式</div>
-      <div class="col-md-4">公司信息</div>
-      <div class="col-md-4">关于</div>
-    </div>
-  </div>
 
+<% include footer %>
 
 </body>
 </html>
