--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,7 +1,28 @@
 <div id="footer" class="container-fluid">
+  <div class="container">
     <div class="row">
-      <div class="col-md-4">联系方式</div>
-      <div class="col-md-4">公司信息</div>
-      <div class="col-md-4">关于</div>
+      <div class="col-md-3">
+        <h3>联系方式</h3>
+        <p>Tel: 010-63458343</p>
+        <p>Wechat</p>
+        <p>Emai: leix.wang@cnwenda.org</p>
+      </div>
+      <div class="col-md-3">
+        <h3>公司信息</h3>
+        <p>Github</p>
+        <p>Twitter</p>
+        <p>新浪微博</p>
+        <p>团队日志</p>
+      </div>
+      <div class="col-md-6">
+        <h3>关于</h3>
+        <p>专注高效地解决技术问题。内容质量的投票机制，合理区分答案与回馈信息，用户参与改进的维基化内容，帮你快捷地找到答案。</p>
+      </div>
     </div>
+    <div class="row">
+      <div class="col-md-12 center">
+        2017 information.
+      </div>
+    </div>
+  </div>
 </div>
