add login reister pages.

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -12,8 +12,12 @@
         </ul>
       </div>
       <div class="col-md-2"></div>
-      <div class="col-md-2"></div>
-      <div class="col-md-2"></div>
+      <div class="col-md-2">
+          <a class="btn big-login" data-toggle="modal" href="javascript:void(0)" onclick="openLoginModal();">Log in</a>
+      </div>
+      <div class="col-md-2">
+          <a class="btn big-register" data-toggle="modal" href="javascript:void(0)" onclick="openRegisterModal();">Register</a
+      </div>
       <div class="col-md-1"></div>
     </div>
   </div>
