--- a/views/head.ejs
+++ b/views/head.ejs
@@ -6,7 +6,9 @@
   <script src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="http://cdn.bootcss.com/socket.io/1.7.3/socket.io.min.js"></script>
   <link href="http://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="/js/login-register.js" type="text/javascript"></script>
 
 
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel='stylesheet' href='/stylesheets/login-register.css' />
 </head>
